# logging

./: CMakeLists.txt  LICENSE  README.md  Usage.txt
config/: example_logging_config.txt
include/logging/: appender_addable_interface.h  appender_base.h  appender_config.h  appender_factory.h  appender_interface.h  ara_log_format_policy.h  aralog_appender.h  console_appender.h  default_format_policy.h  default_format_policy_with_newline.h  file_appender.h  log_event.h  log_header.h  log_level.h  log_manager.h  logger.h  logger_config.h  logger_map.h  logging_configurator.h  message_appender.h
src/: CMakeLists.txt  log_manager.cpp  logger.cpp  logger_map.cpp  logging_configurator.cpp
src/appender/: appender_base.cpp  appender_config.cpp  aralog_appender.cpp  console_appender.cpp  file_appender.cpp
test/: CMakeLists.txt  log_manager_test.cpp  logger_test.cpp  main.cpp
